<resources>
    <string name="app_name">idecabe2</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_project">Add Project</string>
    <string name="detailFragment">detailfragment</string>
    <string name="Regis">register</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_fullname">Please Enter your Fullname</string>
    <string name="enter_pass">Please Enter Password</string>
    <string name="longer_pass">Pleases enter longer password</string>
    <string name="login">login</string>
    <string name="camera">camera</string>
    <string name="take_photo">Take Photo</string>
    <string name="test">test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bundle_camera">bundle_project_image</string>
    <string name="addCollabroator">add Collaborator</string>
</resources>