<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.idecabe2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>


    <action
        android:id="@+id/action_to_project_detail_fragment"
        app:destination="@id/projecctDetailFragment"
        />

    <action
        android:id="@+id/nav_test_fragment"
        app:destination="@+id/navigation_blacnk">
    </action>

    <fragment
        android:id="@+id/navigation_blacnk"
        android:name="com.example.idecabe2.ui.home.BlankFragment"
        android:label="@string/test"
        tools:layout="@layout/fragment_blank"/>

    <fragment
        android:id="@+id/navigation_add_project"
        android:name="com.example.idecabe2.ui.addProject.AddProjectFragment"
        android:label="Add Project"
        tools:layout="@layout/fragment_add_project" >
        <action
            android:id="@+id/action_to_home"
            app:destination="@id/navigation_home"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.idecabe2.ui.camera.CameraFragment"
        android:label="Camera Fragment"
        tools:layout="@layout/fragment_camera"
        />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.idecabe2.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/projecctDetailFragment"
        android:name="com.example.idecabe2.ui.projectDetail.ProjectDetailFragment"
        android:label="@string/detailFragment"
        tools:layout="@layout/fragment_project_detail">
        <action
            android:id="@+id/action_projec_detail_to_camera"
            app:destination="@+id/navigation_camera"
            />
    </fragment>

    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.example.idecabe2.ui.camera.CameraFragment"
        android:label="@string/camera"
        tools:layout="@layout/fragment_camera"
        />
</navigation>